# nhl-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  data-issue.yml  feature-request.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/specs/second-by-second-analytics/: plan.md  spec.md  tasks.md
data/html/: README.md
docs/: testing.md  viewer-guide.md
examples/: validation_report_example.py
migrations/: 001_seasons.sql  002_conferences_divisions.sql  003_venues.sql  004_teams.sql  005_players.sql  006_player_team_history.sql  007_games.sql  008_provenance.sql  009_validation.sql  010_viewer_views.sql  011_seed_teams.sql  012_player_game_stats.sql  013_standings_snapshots.sql  014_game_events.sql  014_shift_charts.sql  014_team_rosters.sql  015_shift_charts.sql  016_team_rosters.sql  017_add_20252026_season.sql  018_player_landing_fields.sql  019_player_game_logs.sql  020_reconciliation_views.sql  021_coverage_dashboard.sql  022_dailyfaceoff.sql  023_html_reports.sql  023_quanthockey.sql  024_seed_team_divisions.sql  025_source_sync_timestamps.sql  026_second_snapshots.sql  027_fix_coverage_game_state.sql
scripts/: diagnose-viewer.sh  run-migration.sh  start-viewer.sh  test-viewer-comprehensive.sh
src/nhl_api/: __init__.py
src/nhl_api/api/: __init__.py
src/nhl_api/cli/: __init__.py  __main__.py  validate.py
src/nhl_api/config/: __init__.py  secrets.py
src/nhl_api/downloaders/: __init__.py
src/nhl_api/downloaders/base/: __init__.py  (+4 more)
src/nhl_api/models/: __init__.py  matchups.py  quanthockey.py  second_snapshots.py  shifts.py
src/nhl_api/services/: __init__.py  player_linking.py
src/nhl_api/utils/: __init__.py  html_storage.py  http_client.py  name_matching.py
src/nhl_api/validation/: __init__.py  analytics_validation.py  constants.py  cross_source_validator.py  internal_consistency.py  results.py
src/nhl_api/viewer/: __init__.py  config.py  dependencies.py  main.py
tests/: __init__.py  conftest.py
tests/data/: README.md  game_response.json  player_response.json  player_stats_response.json  schedule_response.json  standings_response.json  team_response.json
tests/fixtures/dailyfaceoff/: line_combinations_boston.html  line_combinations_full.html
tests/fixtures/html/: ES020500.HTM  FC020500.HTM  FS020500.HTM  GS020500.HTM  PL020500.HTM  RO020500.HTM  SS020500.HTM  TH020500.HTM  TV020500.HTM
tests/fixtures/nhl_stats/: shift_charts_2024020500.json
tests/integration/: __init__.py
tests/integration/analytics/: __init__.py  conftest.py  test_aggregation.py  test_event_attribution.py  test_event_counts.py  test_html_comparison.py  test_matchup_service.py  test_shift_totals.py  test_situation_codes.py
tests/integration/data_flow/: __init__.py  conftest.py  test_cross_source_validation.py  test_data_flow.py  test_download_validation.py  test_storage_validation.py
tests/integration/downloaders/: __init__.py  conftest.py  test_html_downloaders.py  test_shift_charts_integration.py
tests/integration/viewer/: __init__.py  conftest.py  test_app_lifecycle.py
tests/unit/: test_base_downloader.py  test_db_connection.py  test_fixtures.py  test_http_client.py  test_progress_repo.py  test_progress_tracker.py  test_protocol.py  test_rate_limiter.py  test_retry_handler.py  test_sample.py  test_secrets.py
tests/unit/downloaders/: __init__.py
tests/unit/models/: test_matchups.py  test_quanthockey.py  test_second_snapshots.py  test_shifts.py
tests/unit/services/: test_player_linking.py
tests/unit/utils/: test_html_storage.py  test_name_matching.py
tests/unit/validation/: test_boxscore_rules.py  test_cross_source_rules.py  test_html_rules.py  test_internal_consistency.py  test_json_vs_html.py  test_pbp_rules.py  test_shift_rules.py  test_standings_rules.py
tests/unit/viewer/: __init__.py  conftest.py  test_api_info.py  test_auto_validation_service.py  test_config.py  test_coverage.py  test_entities.py  test_health.py  test_monitoring.py  test_reconciliation_router.py  test_reconciliation_service.py  test_validation_router.py
viewer-frontend/: index.html  package-lock.json  package.json  vite.config.ts
viewer-frontend/src/: App.tsx  main.tsx
viewer-frontend/src/components/: EntityLinks.tsx  ErrorBoundary.tsx  GasTankGauge.tsx  Layout.tsx  SeasonSelector.tsx  ThemeProvider.tsx  ThemeToggle.tsx
viewer-frontend/src/contexts/: SeasonContext.tsx
viewer-frontend/src/hooks/: useApi.ts  useCoverage.ts  useDailyFaceoff.ts  useDownloads.ts  useGames.ts  usePlayers.ts  useQuickDownloads.ts  useReconciliation.ts  useTeams.ts  useValidation.ts
viewer-frontend/src/lib/: api.ts
viewer-frontend/src/pages/: Coverage.tsx  Dashboard.tsx  Downloads.tsx  GameDetail.tsx  GameReconciliation.tsx  Games.tsx  Help.tsx  Injuries.tsx  Lineups.tsx  PlayerDetail.tsx  Players.tsx  TeamDetail.tsx  Teams.tsx  Validation.tsx  ValidationRunDetail.tsx
viewer-frontend/tests/: dashboard.spec.ts  data-viewer.spec.ts  downloads.spec.ts  game-reconciliation.spec.ts  season-selector.spec.ts  validation.spec.ts
(+146 files in other folders)
